# coding_agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.bat  start.command
api/: schema.py  types.ts
backend/: cli.py  clock.py  main.py
backend/agents/: __init__.py  answer.py  coder.py  doc.py  final.py  graph.py  manager.py  planner.py  prompts.py  repo.py  types.py  verifier.py
backend/memory/: __init__.py  store.py
backend/tools/: __init__.py  fs.py  git.py  registry.py  shell.py
docs/: agent_interview.md  backend_code_reading.md  guide.html  guide.md  resume.md  test_issues.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  style.css
kefu/: README.md  index.html
kefu/css/: style.css
kefu/data/: phones.json
kefu/js/: app.js  chat.js  products.js  recommend.js
llm/: __init__.py  client.py  store.py
memory/config/: models.json  models_example.json
memory/data/: global.md
memory/data/projects/8580be728c81/: meta.json  project.md
memory/data/projects/a1af96285a5f/: project.md
run_test/exercises/: README.md  main.py  pyproject.toml  start.bat  start.sh
run_test/exercises/docs/plans/: 0483f33cb845.md
run_test/exercises/exercises-dataset/data/: exercises_zh.json
run_test/exercises/src/exercises/: __init__.py
run_test/exercises/static/: app.js  style.css
run_test/exercises/templates/: index.html
run_test/exercises/tests/: test_main.py
scripts/: dev.py
tests/: test_agent.py  test_coder.py  test_llm.py  test_memory.py  test_ports.py  test_tools.py  test_verifier.py
(+10 files in other folders)
