[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yousheng", email = "1041586605@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.scripts]
exercises = "exercises:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
